Fixing the collapsing button issue..

--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -64,6 +64,7 @@ input, button, textarea, .form-control {
   border: 1px solid #28d425;
   border-radius: 20px;
   color: #28d425;
+  display: inline-block;
   
   &.destroy {
     border-color: #fb1e14;
